--- a/SCE-Final-Project-2024/Pages/Shared/_Layout.cshtml
+++ b/SCE-Final-Project-2024/Pages/Shared/_Layout.cshtml
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -26,7 +26,6 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
                         </li>
                     </ul>
-                <partial name="_LoginPartial" />
                 </div>
             </div>
         </nav>
