Added mailing service

--- a/SCE-Final-Project-2024/Pages/Shared/_Layout.cshtml
+++ b/SCE-Final-Project-2024/Pages/Shared/_Layout.cshtml
@@ -28,16 +28,14 @@
                     </ul>
 
                     <ul class="navbar-nav">
-                        @if (User.Identity?.IsAuthenticated == true)
-                        {
+                        @if (User.Identity?.IsAuthenticated == true) {
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Logout">Logout</a>
                             </li>
                         }
-                        else
-                        {
+                        else {
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Login">Login</a>
+                                <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Login">Login/Register</a>
                             </li>
                         }
                     </ul>
