--- a/SCE-Final-Project-2024/Pages/Index.cshtml
+++ b/SCE-Final-Project-2024/Pages/Index.cshtml
@@ -1,10 +1,26 @@
 ﻿@page
 @model IndexModel
 @{
+    Layout = "_LayoutNoNavbar";
     ViewData["Title"] = "Home page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="d-flex align-items-center justify-content-center flex-column" style="height: 40vh;">
+
+    <div class="text-center">
+        <img src="~/images/logo_sce.png" alt="Your Logo" class="logo-img">
+    </div>
+
+    <div class="text-center mt-5">
+        <!-- Adjust the margin-top (mt-5) value as needed -->
+        @if (User.Identity?.IsAuthenticated == true)
+        {
+            <a class="btn btn-dark" asp-area="Identity" asp-page="/Account/Logout">Logout</a>
+        }
+        else
+        {
+            <a class="btn btn-dark" asp-area="Identity" asp-page="/Account/Login">Login/Register</a>
+        }
+    </div>
+
 </div>
