Added syncfusion to code. Create basic text editor page

--- a/SCE-Final-Project-2024/Pages/Shared/_Layout.cshtml
+++ b/SCE-Final-Project-2024/Pages/Shared/_Layout.cshtml
@@ -4,6 +4,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - SCE_Final_Project_2024</title>
+    <link rel="stylesheet" href="https://cdn.syncfusion.com/ej2/24.1.41/fluent.css" />
+    <script src="https://cdn.syncfusion.com/ej2/24.1.41/dist/ej2.min.js"></script>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/SCE_Final_Project_2024.styles.css" asp-append-version="true" />
@@ -55,7 +57,7 @@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
-
+    <ejs-scripts></ejs-scripts>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
