--- a/SCE-Final-Project-2024/Pages/_ViewImports.cshtml
+++ b/SCE-Final-Project-2024/Pages/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using SCE_Final_Project_2024
 @namespace SCE_Final_Project_2024.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, Syncfusion.EJ2
