--- a/frontend/src/assests/css/App.css
+++ b/frontend/src/assests/css/App.css
@@ -15,7 +15,10 @@
   }
 }
 body {
-  overflow: hidden;
+  width: 100%; /* Set width to 100% of the column */
+  height: calc(100vh - 4rem); /* Adjust height based on viewport height */
+  overflow: auto; /* Add overflow property for scrolling if needed */
+  padding: 1rem; /* Add padding for spacing */
 }
 .App-header {
   background-color: #282c34;
