--- a/frontend/src/assests/css/bootstrap.css
+++ b/frontend/src/assests/css/bootstrap.css
@@ -37,7 +37,7 @@
   --bs-gray-700: #55595c;
   --bs-gray-800: #343a40;
   --bs-gray-900: #1a1a1a;
-  --bs-primary: #698133;
+  --bs-primary: #9ec93b;
   --bs-secondary: #fff;
   --bs-success: #4bbf73;
   --bs-info: #1f9bcf;
@@ -45,7 +45,7 @@
   --bs-danger: #d9534f;
   --bs-light: #fff;
   --bs-dark: #344039;
-  --bs-primary-rgb: 105,129,51;
+  --bs-primary-rgb: 158, 201, 59;
   --bs-secondary-rgb: 255, 255, 255;
   --bs-success-rgb: 75, 191, 115;
   --bs-info-rgb: 31, 155, 207;
