--- a/frontend/src/pages/AboutUs.css
+++ b/frontend/src/pages/AboutUs.css
@@ -1,7 +1,6 @@
 .App {
-  text-align: center; /* Example styling for centering content */
-  color: white; /* Set default text color to white */
-  padding-left: 10px; /* Adjust as needed */
+  text-align: center;
+  color: white; 
 }
 
 .about-us-container {
@@ -11,21 +10,21 @@
 }
 
 .section {
-  flex-basis: 50%; /* Adjust width here */
-  margin-bottom: 0; /* Remove bottom margin */
+  flex-basis: 50%;
+  margin-bottom: 0;
 }
 
 p {
-  color: white; /* Set color of paragraphs to white */
+  color: white; 
 }
 
 h2 {
-  color: white; /* Set color for headings */
-  font-size: 2.2em; /* Example of heading font size */
+  color: white;
+  font-size: 2.2em; 
 }
 
 .App-footer {
-  background-color: #282c34; /* Example background color for footer */
+  background-color: #282c34; 
   padding: 10px;
 }
 
@@ -33,7 +32,7 @@ h2 {
   position: relative;
   width: 100%;
   height: 0;
-  padding-bottom: 56.25%; /* 16:9 aspect ratio (adjust as needed) */
+  padding-bottom: 56.25%; 
   overflow: hidden;
 }
 
