--- a/frontend/src/assets/css/Footer.css
+++ b/frontend/src/assets/css/Footer.css
@@ -1,5 +1,5 @@
 .footer {
-    background-color: #333;
+    background-color: #333333;
     color: white;
     padding: 20px 0;
     text-align: center;
@@ -7,6 +7,7 @@
     height: 70px;
     width: 100%;
     bottom: 0;
+    border-top: 2px solid white;
   }
   
   .footer-content {
